--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/713c9e8f48.js" crossorigin="anonymous"></script>
     <title>Not Found Page</title>
 </head>
-<body class="bg-pink-200">
+<body class="bg-white">
     <%- include('layouts/header'); -%>
     <%- include('layouts/footer'); -%>
 
