--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,1 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
+
+
 @import "tailwindcss";
+
+.font-Lobster {
+    font-family: 'Poppins', serif;
+}
+
+.font-Poppins {
+    font-family: 'Poppins', serif;
+}
+
+.container {
+    max-width: 100%;
+    padding-left: 12px;
+    padding-right: 12px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media (min-width:340px){
+    .container-sm{
+        max-width: 340px;
+    }
+}
+@media (min-width:540px){
+    .container-md{
+        max-width: 540px;
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+}
+@media (min-width:768px){
+    .container-lg{
+        max-width: 768px;
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+}
+@media (min-width:1180px){
+    .container-xl{
+        max-width: 1180px;
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+}
+
+
+section {
+    @apply py-15 md:py-28;
+}
+
+.nav-link {
+    @apply text-lg font-bold duration-300;
+}
+
+.nav-link:hover {
+    @apply opacity-70;
+}
+
+
+.btn{
+    @apply border border-teal-900 bg-teal-700 rounded-md px-5 py-2 duration-300;
+}
+
+.btn span{
+    @apply font-bold;
+}
+
+.btn:hover{
+    @apply opacity-85;
+}
