--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/output.css">
-    <script src="https://kit.fontawesome.com/713c9e8f48.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/output.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.min.css"
+    />
     <title>Home Page</title>
-</head>
-<body class="bg-pink-200">
-    <%- include('layouts/header'); -%>
-    <%- include('layouts/footer'); -%>
+  </head>
+  <body class="bg-white">
+    <%- include('layouts/header'); -%> <%- include('layouts/footer'); -%>
+    <main>
+      <!-- Hero section -->
+      <section class="py-5 h-screen">
+        <div
+          class="container container-sm container-md container-lg container-xl flex flex-wrap items-center justify-center mx-auto mt-10 md:px-12 md:flex-row"
+        >
+          <div class="mb-14 lg:mb-0 lg:w-1/2">
+            <h1
+              class="max-w-xl text-[2.9rem] leading-none text-gray-900 font-semibold font-sans text-center lg:text-5xl lg:text-left lg:leading-tight mb-5"
+            >
+              A <span class="text-gray-700">vendor-management system</span> for
+              streamlined order tracking.
+            </h1>
 
-   <script src="/js/scripts.js"></script>
-</body>
+            <div
+              class="flex justify-between space-x-2 mb-4 bg-gray-100 rounded-3xl p-6 max-w-md w-full place-items-center"
+            >
+              <div class="flex-grow px-4 py-2 focus:outline-none font-bold text-base">
+                Enter Your Location
+              </div>
+              <button
+                onclick="getCurrentLocation()"
+                class="bg-teal-800 text-white py-2 px-4 rounded-2xl hover:bg-teal-600 transition-colors"
+              >
+                Use Current Location
+              </button>
+            </div>
+            <p id="output" class="text-sm text-gray-600 mt-4"></p>
+          </div>
+          <div class="lg:w-1/3 sm:w-2/3">
+            <img src="./img/hero.jpg" alt="hero-img" class="rounded-2xl" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Top vendors section -->
+      <section></section>
+
+      <!-- Delivery done section -->
+      <section></section>
+
+      <!-- CTA section -->
+      <section></section>
+    </main>
+
+    <script src="/js/scripts.js"></script>
+  </body>
 </html>
