--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,14 +10,14 @@
     ></script>
     <title>Login Page</title>
   </head>
-  <body class="bg-pink-200">
+  <body class="bg-white">
     <%- include('layouts/header'); -%> <%- include('layouts/footer'); -%>
 
     <% if (typeof successMessage === 'string' || typeof error === 'string' ) { %>
     <div id="flash-messages"
       class="fixed top-0 left-0 right-0 mt-4 mx-auto w-11/12 z-50">
       <% if (typeof successMessage === 'string') { %>
-        <div class="flash-success bg-green-500 text-white text-center py-2 mb-4">
+        <div class="flash-success bg-teal-500 text-white text-center py-2 mb-4">
           <%= successMessage %>
         </div>
       <% } %>
@@ -33,7 +33,7 @@
 
     <form action="/user/login" method="POST">
       <div class="flex justify-center items-center h-screen">
-        <div class="w-96 p-6 shadow-lg bg-white rounded-md">
+        <div class="w-96 p-6 shadow-lg bg-slate-200 rounded-md">
           <h1 class="text-3xl block text-center font-semibold">
             <i class="fa-solid fa-user pr-2"></i>Login
           </h1>
@@ -46,7 +46,7 @@
               type="text"
               id="email"
               name="email"
-              class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600"
+              class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 bg-white"
               placeholder="Enter Your Email Address..."
             />
           </div>
@@ -56,7 +56,7 @@
               type="password"
               id="password"
               name="password"
-              class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600"
+              class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 bg-white"
               placeholder="Enter Your Password..."
             />
           </div>
@@ -77,7 +77,7 @@
           <div class="mt-5">
             <button
               type="submit"
-              class="border-2 border-pink-200 bg-pink-400 text-white py-1 w-full rounded-md hover:bg-transparent hover:text-pink-400 font-semibold"
+              class="border-2 border-teal-200 bg-teal-700 text-white py-1 w-full rounded-md hover:bg-transparent hover:text-teal-700 font-semibold"
             >
               Login<i class="fa-solid fa-right-to-bracket pl-2"></i>
             </button>
