--- a/views/vendorRegistration.ejs
+++ b/views/vendorRegistration.ejs
@@ -10,13 +10,13 @@
     ></script>
     <title>Vendor Registration Page</title>
   </head>
-  <body class="bg-pink-200 p-16">
+  <body class="bg-white p-16">
     <%- include('layouts/header'); -%> <%- include('layouts/footer'); -%>
 
     <% if (typeof successMessage === 'string' || (errors && errors.length > 0)) { %>
       <div id="flash-messages" class="fixed top-0 left-0 right-0 mt-4 mx-auto w-11/12 z-50">
         <% if (typeof successMessage === 'string') { %>
-        <div class="flash-success bg-green-500 text-white text-center py-2 mb-4">
+        <div class="flash-success bg-teal-500 text-white text-center py-2 mb-4">
           <%= successMessage %>
         </div>
         <% } %>
@@ -32,7 +32,7 @@
 
     <form action="/vendor/register" method="POST">
     <div class="flex justify-center items-center h-screen">
-      <div class="w-96 p-6 shadow-lg bg-white rounded-md">
+      <div class="w-96 p-6 shadow-lg bg-slate-200 rounded-md">
         <h1 class="text-3xl block text-center font-semibold">
           <i class="fa-solid fa-user pr-2"></i>Register
         </h1>
@@ -43,7 +43,7 @@
             type="text"
             id="name"
             name="name"
-            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600"
+            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 bg-white"
             placeholder="Enter Your Full Name..."
           />
         </div>
@@ -53,7 +53,7 @@
             type="text"
             id="email"
             name="email"
-            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600"
+            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 bg-white"
             placeholder="Enter Your Email Address..."
           />
         </div>
@@ -63,7 +63,7 @@
             type="password"
             id="password"
             name="password"
-            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600"
+            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 bg-white"
             placeholder="Enter Your Password..."
           />
         </div>
@@ -73,7 +73,7 @@
             type="password"
             id="confirmPassword"
             name="confirmPassword"
-            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600"
+            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 bg-white"
             placeholder="Confirm Your Password..."
           />
         </div>
@@ -83,7 +83,7 @@
             type="tel"
             id="phoneNumber"
             name="phoneNumber"
-            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600"
+            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 bg-white"
             placeholder="Enter Your Phone Number..."
           />
         </div>
@@ -93,7 +93,7 @@
             type="text"
             id="location"
             name="location"
-            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600"
+            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 bg-white"
             placeholder="Enter Your Location..."
           />
         <div class="mt-3">
@@ -102,11 +102,11 @@
             type="text"
             id="shopName"
             name="shopName"
-            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600"
+            class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-gray-600 bg-white"
             placeholder="Enter Your Shop Name..."
           />
         <div class="mt-5">
-            <button type="submit" class="border-2 border-pink-200 bg-pink-400 text-white py-1 w-full rounded-md hover:bg-transparent hover:text-pink-400 font-semibold">Register</button>
+            <button type="submit" class="border-2 border-teal-200 bg-teal-700 text-white py-1 w-full rounded-md hover:bg-transparent hover:text-teal-700 font-semibold">Register</button>
         </div>
       </div>
     </div>
